<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/borobudur_edited" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView3"
            android:text="Password"
            android:textColor="#FFFFFF"
            tools:layout_constraintBottom_creator="1"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toRightOf="@+id/imageView4" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/imageView3"
            android:text="Email"
            android:textColor="#FFFFFF"
            tools:layout_constraintBottom_creator="1"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toRightOf="@+id/imageView3"
            android:layout_marginLeft="9dp"
            android:layout_marginBottom="9dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="23dp"
            android:layout_height="28dp"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignParentStart="true"
            app:srcCompat="@drawable/iconuser"
            tools:layout_constraintTop_creator="1"
            android:layout_marginTop="121dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/login_email"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="0dp" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginBottom="26dp"
        android:layout_marginEnd="53dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="27dp"
        android:background="@drawable/roundbtn"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.333"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="280dp"
        android:layout_height="43dp"
        android:layout_marginEnd="26dp"
        android:layout_marginLeft="53dp"
        android:layout_marginRight="53dp"
        android:layout_marginStart="27dp"
        android:background="@drawable/roundbtn"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/login_btnSignUp"
        android:layout_width="281dp"
        android:layout_height="51dp"
        android:background="@drawable/roundbtn"
        android:backgroundTint="?android:attr/colorActivatedHighlight"
        android:text="Sign Up"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/login_btnLogin"
        app:layout_constraintLeft_toLeftOf="@+id/login_btnLogin"
        app:layout_constraintHorizontal_bias="0.0"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="73dp"
        app:layout_constraintTop_toBottomOf="@+id/login_btnLogin"
        tools:layout_editor_absoluteY="463dp" />

    <Button
        android:id="@+id/login_btnLogin"
        android:layout_width="282dp"
        android:layout_height="53dp"
        android:layout_marginBottom="122dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/roundbtn"
        android:backgroundTint="@color/colorPrimary"
        android:text="Log In"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        app:layout_constraintVertical_bias="0.752"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/login_password"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/login_password" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="383dp"
        android:layout_height="69dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="Login"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintLeft_toLeftOf="@+id/toolbar2"
        app:layout_constraintRight_toRightOf="@+id/toolbar2"
        app:layout_constraintTop_toTopOf="@+id/toolbar2" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="15dp"
        android:layout_height="17dp"
        app:srcCompat="@drawable/key"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/imageView3"
        app:layout_constraintBottom_toTopOf="@+id/login_password"
        android:layout_marginBottom="8dp" />

</android.support.constraint.ConstraintLayout>
