...
            app:layout_constraintTop_toBottomOf="@+id/menu_print"
            android:layout_marginTop="102dp"
            android:layout_alignTop="@+id/menu_print"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/menu_booking"
            android:layout_width="282dp"
            android:layout_height="53dp"
            android:background="@drawable/roundbtn"
            android:backgroundTint="#ffffff"
            android:text="Booking Photo"
            android:textColor="#303f9f"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1"
...
