<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".admin.AdminSchedule">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:measureWithLargestChild="false"
            android:orientation="vertical">

            <ListView
                android:id="@+id/sch_listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp" />

        </RelativeLayout>
</LinearLayout>