...

        <Button
            android:id="@+id/addFr_btnAddFr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="Cancel"
            android:visibility="invisible"
            android:enabled="false"
            android:textColor="#ffffff"
            android:layout_marginLeft="270dp"
            android:layout_marginTop="65dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar2" />
...
